php-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
      - name: php-container
        image: phpservice:v2
        imagePullPolicy: Never
        ports:
        - containerPort: 80
